namespace LocMp.Catalog.Application.DTOs;

public sealed record TagDto(Guid Id, string Name, string Slug, int ProductCount);
