namespace LocMp.Catalog.Domain.Enums;

public enum BusinessType
{
    Individual = 1,      // Физлицо, самозанятый
    SoleProprietor = 2,  // ИП
    SmallBusiness = 3    // ООО и прочие юрлица
}
