namespace LocMp.Catalog.Domain.Enums;

public enum StockChangeType
{
    InitialStock = 1,
    ManualAdjustment = 2,
    OrderReserved = 3,
    OrderReleased = 4
}
