@startuml catalog-service
title <size:16><b>CatalogService</b></size>\n<color:#555>Диаграмма классов (schema: catalog)</color>

' ─── Глобальные настройки стиля ──────────────────────────────────────────────
skinparam defaultFontName "Segoe UI", Arial, sans-serif
skinparam defaultFontSize 13
skinparam roundcorner 10
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam nodesep 60
skinparam ranksep 70

skinparam class {
    BackgroundColor White
    HeaderBackgroundColor #E9F7EF
    BorderColor #27AE60
    BorderThickness 1.2
    ArrowColor #27AE60
    ArrowThickness 1.2
    AttributeFontColor #2C3E50
}

skinparam enum {
    BackgroundColor White
    HeaderBackgroundColor #EAFAF1
    BorderColor #1E8449
    BorderThickness 1.2
}

skinparam note {
    BackgroundColor #FFF9C4
    BorderColor #FBC02D
    FontColor #4E342E
    BorderThickness 1.2
    roundcorner 6
}

skinparam stereotypeCBackgroundColor #D5F5E3
skinparam stereotypeABackgroundColor #FDEBD0
skinparam stereotypeEBackgroundColor #D5F5E3

' ─── Enums ───────────────────────────────────────────────────────────────────

enum StockChangeType {
    InitialStock
    ManualAdjustment
    OrderReserved
    OrderReleased
}

enum BusinessType {
    Individual = 1
    SoleProprietor = 2
    SmallBusiness = 3
}

' ─── Shop ────────────────────────────────────────────────────────────────────

class Shop {
    + Id : Guid <<PK>>
    + SellerId : Guid <<logical ref: Identity>>
    + BusinessName : string
    + PhoneNumber : string
    + Email : string
    + Description : string?
    + Inn : string?
    + BusinessType : BusinessType
    + WorkingHours : string?
    + ServiceRadiusMeters : int?
    + Location : Point? <<geography(Point,4326)>>
    + AvatarUrl : string?
    + AvatarObjectKey : string?
    + AllowCourierDelivery : bool
    + AllowSellerDelivery : bool
    + MaxCourierDistanceMeters : int?
    + IsVerified : bool
    + VerifiedAt : DateTimeOffset?
    + Address : ShopAddress? <<owned entity>>
    ..рейтинг (агрегация из товаров)..
    + AverageRating : decimal
    + ReviewCount : int
    ..состояние..
    + IsActive : bool
    + CreatedAt : DateTimeOffset
    + UpdatedAt : DateTimeOffset?
}

class ShopAddress <<owned entity>> {
    + City : string
    + Street : string
    + HouseNumber : string
    + Apartment : string?
    + Entrance : string?
    + Floor : string?
}

class ShopPhoto {
    + Id : Guid <<PK>>
    + ShopId : Guid <<FK>>
    + StorageUrl : string <<MinIO bucket: catalog-media>>
    + ObjectKey : string <<MinIO object key>>
    + MimeType : string
    + FileSize : long
    + SortOrder : int
    + UploadedAt : DateTimeOffset
}

' ─── Category ────────────────────────────────────────────────────────────────

class Category {
    + Id : Guid <<PK>>
    + ParentCategoryId : Guid? <<FK → self>>
    + Name : string
    + Description : string?
    + ImageUrl : string?
    + SortOrder : int
    + IsActive : bool
    + CreatedAt : DateTimeOffset
    + UpdatedAt : DateTimeOffset?
}

' ─── Product Aggregate ────────────────────────────────────────────────────────

class Product <<aggregate root>> {
    + Id : Guid <<PK>>
    + SellerId : Guid <<logical ref: Identity>>
    + ShopId : Guid <<FK>>
    + CategoryId : Guid <<FK>>
    ..описание..
    + Name : string
    + Description : string?
    ..ценообразование..
    + Price : decimal
    + Unit : string
    ..управление остатком..
    + StockQuantity : int
    + IsMadeToOrder : bool
    + LeadTimeDays : int?
    ..геолокация точки продажи..
    + Location : Point <<geography(Point,4326)>>
    ..произвольные метаданные..
    + Attributes : JsonDocument? <<jsonb>>
    ..рейтинг (денормализация из Review)..
    + AverageRating : decimal
    + ReviewCount : int
    ..состояние..
    + IsActive : bool
    + IsDeleted : bool
    + DeletedAt : DateTimeOffset?
    + CreatedAt : DateTimeOffset
    + UpdatedAt : DateTimeOffset?
}

class ProductPhoto {
    + Id : Guid <<PK>>
    + ProductId : Guid <<FK>>
    + StorageUrl : string <<MinIO bucket: catalog-media>>
    + ObjectKey : string <<MinIO object key>>
    + MimeType : string
    + FileSize : long
    + SortOrder : int
    + IsMain : bool
    + UploadedAt : DateTimeOffset
}

class StockHistory {
    + Id : Guid <<PK>>
    + ProductId : Guid <<FK>>
    + ChangeType : StockChangeType
    + QuantityDelta : int
    + QuantityAfter : int
    + ReferenceId : Guid? <<logical ref: OrderId>>
    + CreatedAt : DateTimeOffset
}

' ─── Tag System (Smart Filters) ──────────────────────────────────────────────

class Tag {
    + Id : Guid <<PK>>
    + Name : string <<unique>>
    + Slug : string <<unique>>
}

class ProductTag <<junction>> {
    + ProductId : Guid <<FK, PK>>
    + TagId : Guid <<FK, PK>>
}

' ─── Read Models ─────────────────────────────────────────────────────────────

class SellerReadModel <<read model>> {
    + SellerId : Guid <<PK, logical ref: Identity>>
    + DisplayName : string
    + AvatarUrl : string?
    + AverageRating : decimal
    + ReviewCount : int
    + Location : Point? <<geometry(Point,4326)>>
    + LastSyncedAt : DateTimeOffset
}

class Favorite {
    + Id : Guid <<PK>>
    + UserId : Guid <<logical ref: Identity>>
    + ProductId : Guid <<FK>>
    + CreatedAt : DateTimeOffset
    ' UNIQUE INDEX (UserId, ProductId)
}

' ─── Relationships ────────────────────────────────────────────────────────────

Category "0..1" -right- "0..*" Category : parent >

Shop "1" *-down- "0..*" ShopPhoto : фото магазина >
Shop "1" *-right- "1..*" Product : товары >
Shop "1" *-- "0..1" ShopAddress : адрес >
Shop ..> BusinessType : использует

Product "0..*" -up-> "1" Category : принадлежит >
Product "1" *-down- "1..*" ProductPhoto : фото >
Product "1" *-down- "0..*" StockHistory : история остатков >
Product "1" -right- "0..*" ProductTag
Tag "1" -left- "0..*" ProductTag

Product "0..*" -left-> "1" SellerReadModel : витрина продавца

Favorite "0..*" -right-> "1" Product

Product ..> StockChangeType : использует

' ─── Notes ───────────────────────────────────────────────────────────────────

note right of Shop
  AllowSellerDelivery (default false):
  продавец сам доставляет заказ.
  AllowCourierDelivery (default true):
  разрешена доставка курьером-соседом.

  AverageRating / ReviewCount:
  средневзвешенный рейтинг по всем
  товарам магазина (без прямых отзывов).

  Формула: SUM(product.AverageRating
    × product.ReviewCount)
    / SUM(product.ReviewCount)

  Пересчитывается в консьюмере:
  RatingAggregateUpdatedEvent
  (SubjectType == "Product")
end note

note right of Product
  SellerId — логическая ссылка.
  Нет FK в БД (другой сервис).

  Attributes (jsonb), примеры:
  {"состав":"мука,яйца","вес_г":500}
  {"материал":"дерево","размер":"30x20"}
  {"объём_л":1.5,"крепость_":4.5}

  Location — geography(Point,4326):
  метрические запросы без конвертации.
  ST_DWithin(product.location,
    buyer.location, radius_m)

  AverageRating / ReviewCount:
  денормализованы из ReviewService.
  Обновляются через консьюмер:
  RatingAggregateUpdatedEvent
  (SubjectType == "Product")
end note

note right of ProductPhoto
  Хранится в schema: catalog.
  StorageUrl → MinIO bucket: catalog-media
  Путь: products/{productId}/{photoId}.jpg
end note

note bottom of SellerReadModel
  Денормализованная копия из Identity+Review.
  Обновляется через консьюмеры:
  • UserProfileUpdatedEvent → DisplayName, AvatarUrl
  • UserBecameSellerEvent   → создать запись
  • RatingAggregateUpdatedEvent (SubjectType=="Seller")
    → AverageRating, ReviewCount
  Нет FK — принадлежит другому сервису.
end note

note right of StockHistory
  Аудит каждого изменения остатка.
  QuantityDelta: знаковый int.
  +5 = пополнение, -1 = резерв под заказ.
  ReferenceId = OrderId при заказе.
end note


' ─── Сводная таблица сущностей ───────────────────────────────────────────────

legend bottom
  <b>Таблицы сервиса (schema: catalog)</b>
  |= Класс C# |= Таблица в БД |= Описание |
  | Shop | Shops | Магазин продавца с геолокацией (geography), бизнес-типом, настройками AllowCourierDelivery/AllowSellerDelivery и агрегированным рейтингом по товарам |
  | ShopAddress | — (owned, в Shops) | Адрес магазина: City, Street, HouseNumber, Apartment, Entrance, Floor |
  | ShopPhoto | ShopPhotos | Фото магазина (StorageUrl → MinIO bucket: catalog-media) |
  | Category | Categories | Дерево категорий товаров (self-referencing) |
  | Product | Products | Товар продавца с геолокацией и JSONB-атрибутами |
  | ProductPhoto | ProductPhotos | Фото товара (StorageUrl → MinIO bucket: catalog-media) |
  | StockHistory | StockHistory | Аудит каждого изменения остатка товара |
  | Tag | Tags | Смарт-фильтры («без глютена», «ручная работа») |
  | ProductTag | ProductTags | M:M связь товар ↔ тег |
  | SellerReadModel | SellerReadModels | Кэш профиля продавца (DisplayName, AverageRating), обновляется через события |
  | Favorite | Favorites | Избранные товары покупателя |
endlegend

@enduml
